@@ -1,0 +1,9 @@
+id,rating
+0,5.3
+1,6
+2,5.7
+3,3.3
+4,9.1
+5,4.4
+6,5.1.1
+7,4.9
